# font

./: .gitignore  README.md  UPDATE_LOG.md  debug-update.js  package-lock.json  package.json  release.js  sign_temp.js  test.txt  update-version.js  vite.config.js
.github/workflows/: release.yml
scripts/: release.js  sign-update.js  signing-manager.js  updater.mjs
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  tauri.conf.json
src/components/: AppActions.vue  BatchOperationBar.vue  FavoriteList.vue  FontList.vue  FontPreview.vue  SearchBar.vue  SettingsSidebar.vue  ThemeToggle.vue  UpdateNotifier.vue
src/constants/: index.js  version.js
src/styles/: variables.css
src/utils/: updateUtils.js
src/views/: ChangelogView.vue  UpdateView.vue
