[package]
name = "font-viewer"
version = "0.1.0"
description = "A desktop font viewer application"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "fs-read-file", "fs-read-dir", "fs-write-file", "fs-exists", "shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"] 
